# solana-tokenized-vault-4626

./: .env-cmdrc.sample  .gitignore  .prettierrc.json  Anchor.toml  README.md  SCAFFOLDING.md  package.json  rustfmt.toml
.cursor/rules/anchor/: rule-anchor-architecture-always.mdc  rule-instructions-auto.mdc  rule-lib-entry-point-auto.mdc  rule-states-auto.mdc
programs/token-factory/: Cargo.toml
programs/token-factory/src/: error.rs  lib.rs
programs/token-factory/src/access_controls/: mod.rs
programs/token-factory/src/instructions/: create_token.rs  mod.rs
programs/token-factory/src/instructions/admin/: config.rs  initialize.rs  mod.rs  permission_admin.rs
programs/token-factory/src/states/: config.rs
programs/token-factory/src/utils/: account.rs  constants.rs  mod.rs
programs/token-factory/src/views/: get_fee.rs  mod.rs
programs/tokenized-vault/: Cargo.toml
programs/tokenized-vault/src/: error.rs  lib.rs
programs/tokenized-vault/src/access_controls/: only_owner.rs  only_permission.rs  only_permission_admin.rs
programs/tokenized-vault/src/instructions/: deposit.rs  withdraw.rs
programs/tokenized-vault/src/states/: access.rs  config.rs  mod.rs
programs/tokenized-vault/src/utils/: big_num.rs  constants.rs  full_math.rs  mod.rs  shares_math.rs
programs/tokenized-vault/src/views/: mod.rs  preview.rs
shared/: token-factory.constants.ts  tokenized-vault.constants.ts  utils.ts
tests/: token-factory.ts  tokenized-vault.ts
tests/fixtures/: chai-extended.ts  factory-fixture.ts  spl.ts  tokenized-vault-fixture.ts  utils.ts
(+3 files in other folders)
