[package]
name = "token-factory"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_factory"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["metadata"] }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
# solana-program = "2.3.0" # 3.0.0 is not compatible with anchor-lang 0.32.1
spl-account-compression = { version="1.0.0", features = ["cpi"] }
spl-token-metadata-interface = "0.8.0"
uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }
spl-token-2022 = { version = "9.0.0", features = [ "no-entrypoint" ] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
